Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
.App {
  background-color: purple;
  width: 100vw;
  max-width: 100vw;
  //  height: calc(100vh - constant(safe-area-inset-bottom));

  margin: 0;

  //padding-bottom: env//(safe-area-inset-bottom);
  //overflow-y: hidden;
}
.drum-machine {
  height: 100vh;
  max-height: fill-available;
  //put here instead of inline because inline wouldnt accept "fit available"
}

.btn {
  border-radius: 10%;
}
.h-sm-40 {
  height: 40% !important;
}
.h-sm-60 {
  height: 60% !important;
  //max-height: 60% !important;
}

.drum-btn {
  width: 18%;
  aspect-ratio: 1/1;
}

#indicators-row {
  max-height: 10vh;
  height: 10vh;
}

input[type="range"],
.slider {
  -webkit-appearance: slider-vertical; /* Hides the slider so that custom slider can be made */
  //width: 10vh; /* Specific width is required for Firefox. */
  height: 33%;
  //  margin-top: auto;
  //  margin-bottom:auto;
  /* margin-top: 95vh;
   margin-left: -20vw;
   margin-right: 0; */
  appearance: slider-vertical;
  background: red; /* Otherwise white in Chrome */
  border: solid yellow;
  grid-area: slider;
}

input[type="range"]::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  height: 20px;
  width: 20px;
  background-color: green;
  // color: green;
}

// input[type=range]:focus {
//   outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
// }

// input[type=range]::-ms-track {
//   width: 100%;
//   cursor: pointer;

//   /* Hides the slider so custom styles can be added */
//   background: transparent;
//   border-color: transparent;
//   color: transparent;
// }

#pad {
  //width: 20rem;
  margin: 0;
  //margin-bottom: 10%;
  padding: 0;
  // background-color: red;
}

.pad-keys {
  //toggled only on click
  color: red;
  animation: blink 1s;
}
@keyframes blink {
  0% {
    background-color: red;
  }
  100% {
    background-color: black;
  }
}

.pad-row {
  justify-content: space-evenly;
  align-items: start;
  width: 100%;
  height: 33%;
  max-height: 33%;
  margin: 0 0 5% 0;
  padding: 0;
  //background-color: green;
}

.vinyl-grey-parts {
  fill: rgba(30, 30, 30, 1);
}

svg {
  filter: drop-shadow(-10px 10px 5px rgb(0 0 0 /0.4));
  max-height: 100%;
  overflow: visible;
}

@media (576px<width<992px) {
  .display {
    margin-top: 3.8%;
  }
  .drum-btn {
    width: 15%;
    aspect-ratio: 1/1;
  }
  .pad-row {
    margin: 0 0 2% 0;
  }

  .me-med {
    margin-right: 8% !important;
  }
}

@media (992px<width<1200px) {
  .drum-btn {
    width: 15%;
    aspect-ratio: 1/1;
  }

  /* .h-xl-35{
    height: 40% !important;
  }
  .h-xl-65{
    height: 60% !important;
  } */

  .me-med {
    margin-right: 8% !important;
  }

  .pad-row {
    margin: 0 0 2% 0;
  }
  .display {
    margin-top: 1.2%;
  }
}

@media (width>1200px) {
  .xl-layout {
    height: 100vh !important;
  }
  #indicators-row {
    max-height: 15vh;
    height: 15vh;
  }
  .pad-row {
    margin: 0 0 5% 0;
  }
  #pad {
    //width: 20rem;
    margin: 0;
    //margin-bottom: 10%;
    padding: 0;
    // background-color: red;
  }

  .pad-row {
    margin: 0 0 2.5% 0;
  }
  .display {
    margin-top: 12%;
  }
  .xl-display {
    display: flex !important;
    flex-direction: column !important;
    justify-content: end !important;
  }
  .drum-btn {
    width: 22%;
    aspect-ratio: 1/1;
  }
}
/*#id{
  display: grid;
  grid-template-areas:
  "toggle . . . . slider"
  "display display display display display slider"
  ". . . . . slider";
}*/

